Aviso de undo não implementado

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <script>
         //botão de reiniciar
         document.getElementById('reiniciar').addEventListener('click',iniciarJogo);
-        document.getElementById('desfazer').addEventListener('click',novoBloco);
+        document.getElementById('desfazer').addEventListener('click',()=>{alert("Função Não Implementada")});
         //carregar o jogo quando a página carregar
         window.addEventListener('load', iniciarJogo);
         //implementando a mecânica de movimento
