Corrigindo cores dos blocos

--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
                             caixa.style.color="#FBF7F1";
                             break
                         case '64':
-                            caixa.style.backgroundColor="#FEF4EA";
+                            caixa.style.backgroundColor="#F57C5C";
                             caixa.style.color="#FBF7F1";
                             break
                         case '128':
-                            caixa.style.backgroundColor="#FBF6EF";
+                            caixa.style.backgroundColor="#EC8E3D";
                             caixa.style.color="#FBF7F1";
                             break
                         case '256':
-                            caixa.style.backgroundColor="#EDCC5F";
+                            caixa.style.backgroundColor="#F1A51B";
                             caixa.style.color="#FBF7F1";
                             break
                         case '512':
-                            caixa.style.backgroundColor="#ECC84F";
+                            caixa.style.backgroundColor="#C5B104";
                             caixa.style.color="#FBF7F1";
                             break
                         case '1024':
-                            caixa.style.backgroundColor="#F5B93B";
+                            caixa.style.backgroundColor="#A4A508";
                             caixa.style.color="#FBF7F1";
                             break
                         case '2048':
-                            caixa.style.backgroundColor="#29271B";
+                            caixa.style.backgroundColor="#E5BE00";
                             caixa.style.color="#FBF7F1";
                             break
                     }
