--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="box-singular" id="14"></div>
             <div class="box-singular" id="15"></div>
         </div>
+        <p class="disclaimer">Feita por Arthur Venâncio</p>
     </main>
         <!--Funções de estilo-->
         <script>
