Aviso de como jogar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
     <main>
         <p class="disclaimer">Essa página tem intuitos apenas educacionais</p>
+        <p class="disclaimer">Use as setas dos teclados para jogar</p>
         <div class="box-principal">
             <div class="box-singular" id="0"></div>
             <div class="box-singular" id="1"></div>
