implementando setas de navegação no mobile

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             <div class="box-singular" id="15"></div>
         </div>
         <p class="disclaimer">Feita por Arthur Venâncio</p>
+        <div class="mobile">
+            <button id="ativar_controle">Ativar Setas</button>
+            <button class="seta" id="cima"><img src="" alt=""></button>
+            <button class="seta" id="baixo"><img src="" alt=""></button>
+            <button class="seta" id="esquerda"><img src="" alt=""></button>
+            <button class="seta" id="direita"><img src="" alt=""></button>
+        </div>
     </main>
         <!--Funções de estilo-->
         <script>
