--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>2048</title>
 </head> 
 <body>
-    <div id="game_over" style="display: none;"></div>
     <header>
         <div class="header-titulo">2048</div>
         <div class="pontuacao">
@@ -338,6 +337,7 @@
         <script>
             //matriz prévia
             var matriz_previa=[]
+            //matriz atual
             var matriz = [];
             //botão de reiniciar
             document.getElementById('reiniciar').addEventListener('click',iniciarJogo);
